--- a/style.css
+++ b/style.css
@@ -36,17 +36,17 @@ header {
 }
 
 .content-ttl {
-    width: 100%;
+    width: 90%;
     position: absolute;
     top: 60px;
-    left: 12%;
+    left: 10%;
 }
 .content-ttl1 {
-    font-size: 80px;
+    font-size: 5rem;
     font-family: 'Preahvihear', sans-serif;
     width: 70%;
     color: #c40283;
-    line-height: 130px
+    line-height: 130px;
 }
     
 .content-ttl-groen {
@@ -80,23 +80,22 @@ span {
 .section-news {
     color: #c40283;
     font-family: 'Preahvihear', sans-serif;
-    margin: 0 15%;
+    margin: 0 10%;
     font-size: 30px;
 }
 
 .section-ttl1 {
     color:rgb(100, 100, 100);
-    font-size: 50px;
-    margin: 2% 0 5% 15%;
-
+    font-size: 40px;
+    margin: 2% 0 5% 10%;
 }
 
 .news-lists {
-    width: 70%;
     border-top: solid rgb(196, 196, 196);
     border-bottom: solid rgb(196, 196, 196);
-    margin: 0 0 0 15%;
+    margin: 0 0 0 10%;
     padding: 5% 0;
+    width: 80%;
 }
 
 .news-list-link {
@@ -125,6 +124,7 @@ time {
     margin: 0 0 0 10px;
     color:rgb(139, 139, 139);
     font-size: 30px;
+    margin: 0 0 0 5%;
 }
 
 .about {
@@ -145,8 +145,7 @@ time {
 .section-ttl2 {
     display: flex;
     justify-content: center;
-    margin: 0 0 20px 0;
-    font-size: 50px;
+    font-size: 40px;
     color: rgb(107, 107, 107);
 }
 
@@ -182,8 +181,8 @@ time {
 
 .about-img {
     width: 40%;
-    height: auto;
-    transform: translate( -10%, 0);
+    height: 400px;
+    transform: translate( -40px, 70px);
 }
 
 .service {
@@ -195,13 +194,14 @@ time {
     color: #c40283;
     font-family: 'Preahvihear', sans-serif;
     margin: 0 5%;
+    font-size: 30px;
 }
 
 .section-ttl3 {
     color:rgb(100, 100, 100);
     font-size: 20px;
     margin: 2% 0 5% 5%;
-
+    font-size: 40px;
 }
 
 .grid-parent {
@@ -228,7 +228,7 @@ time {
 }
 
 .grid-child1-img1 {
-    width: 40%;
+    width: 20%;
     height: auto;
 }
 
@@ -240,43 +240,47 @@ time {
 .grid-child1-ttl1 {
     color:white;
     margin: 5% 0;
+    font-size: 25px;
 }
 
 .grid-child1-text {
     color: white;
     line-height: 25px;
-    padding: 0 10px;
+    width: 80%;
+    font-size: 20px;
+    padding: 0 10%;
 }
 
 .grid-child2 {
     grid-column: 2/3;
     grid-row: 1/2;
     background-color: rgb(153, 64, 113);
-    padding: 20% 0;
+    padding: 10% 0;
 }
 
 .grid-child2-img {
     display: flex;
     flex-direction: row;
-    transform: translate( 0 , -10px);
 }
 
 .grid-child2-img1 {
-    width: 40%;
+    width: 25%;
     height: auto;
-    transform: translate( 0 , -50px);
+    transform: translate( 10px , -70px);
 }
 
 .grid-child2-ttl {
-    margin: 0 0 0 40%;
+    width: 40%;
     color: white;
-    transform: translate( 0 , -30px);
+    transform: translate( 180px , -30px);
+    font-size: 25px;
 }
 
 .grid-child2-text {
     line-height: 25px;
     color: white;
-    font-size: 12px;
+    font-size: 20px;
+    padding: 0 5%;
 }
 
 .grid-child3 {
@@ -286,9 +290,10 @@ time {
 }
 
 .grid-child3-ttl {
-    margin: 0 0 0 40%;
+    width: 50%;
     color: white;
-    transform: translate( 0 , 30px);
+    transform: translate( 180px , 30px);
+    font-size: 25px;
 }
 
 .grid-child3-img {
@@ -298,15 +303,16 @@ time {
 }
 
 .grid-child3-img1 {
-    width: 40%;
+    width: 25%;
     height: auto;
-    transform: translate( 0 , -50px);
+    transform: translate( 10px , -70px);
 }
 
 .grid-child3-text {
     line-height: 25px;
     color: white;
-    font-size: 12px;
+    font-size: 20px;
+    padding: 0 5%;
 }
 
 
@@ -319,12 +325,14 @@ time {
     font-family: 'Preahvihear', sans-serif;
     margin: 0 5%;
     padding: 20px 0 0 0;
+    font-size: 30px;
 }
 
 .section-ttl4 {
     color:rgb(100, 100, 100);
     font-size: 20px;
     margin: 2% 0 5% 5%;
+    font-size: 40px;
 }
 
 .cards {
@@ -334,7 +342,8 @@ time {
 }
 
 .card {
-    width: 30%;
+    width: 25%;
+    height: auto;
     background-color: white;
     border-radius: 10px;
     position: relative;
@@ -342,7 +351,7 @@ time {
 }
 
 .card-deco {
-    width: 20%;
+    width: 15%;
     background-color: #c40283;
     position: absolute;
     z-index: 10;
@@ -351,6 +360,7 @@ time {
     border-top-left-radius: 10px;
     padding: 10px 10px;
     color: white;
+    font-size: 20px;
 }
 
 .card-img {
@@ -362,67 +372,67 @@ time {
 
 .card-text {
     position: static;
-    padding: 10px;
-    font-size: 12px;
+    padding: 20px;
+    font-size: 20px;
     line-height: 20px;
-
 }
 
 .card-detile {
     display: flex;
-    justify-content: space-around;
-    margin: 10px 0;
+    justify-content: space-between;
+    padding: 30px 0 10px 0;
 }
 
 .card-date {
     position: static;
-    font-size: 10px;
-
+    font-size: 20px;
 }
 
 .card-hashtag {
     position: static;
-    font-size: 10px;
+    font-size: 20px;
 }
 
 .blog-allpage {
-    margin: 10% 0;
-    padding: 15px 40px;
-    width: 15%;
-    transform: translate(135%, -60%);
-    background-color: white;
-    border-radius: 30px;
-    border: solid 1px #c40283;
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
 
 .blog-allpage-link {
+    margin: 5% 0;
+    padding: 20px 60px;
     color:#c40283;
     text-decoration: none;
+    border-radius: 30px;
+    border: solid 2px #c40283;
+    background-color: white;
 }
 
 
 .company {
     width: 100%;
     height: auto;
+    margin: 0 0 10% 0;
 }
 
 .section-company {
     color: #c40283;
     font-family: 'Preahvihear', sans-serif;
-    margin: 0 5%;
+    margin: 0 10%;
     padding: 20px 0 0 0;
+    font-size: 30px;
 }
 
 .section-ttl5 {
     color:rgb(100, 100, 100);
-    font-size: 20px;
-    margin: 2% 0 5% 5%;
-
+    font-size: 40px;
+    margin: 2% 0 5% 10%;
 }
 
 .company-table {
-    margin: 5%;
-    width:85%;
+    margin: 0 0 0 10%;
+    width: 75%;
 }
 
 .company-table-row {
@@ -437,7 +447,6 @@ time {
     padding: 0 10px;
     line-height: 50px;
     border: solid 1px rgb(185, 184, 184);
-
 }
 
 .company-table-des {
@@ -469,36 +478,37 @@ time {
 
 .infor-adopt {
     color: white;
-    transform: translate( 30%, -500%);
+    transform: translate( 30%, -150px);
+    font-size: 30px;
 }
 
 .infor-interview {
     color: white;
-    transform: translate( 30%, -500%);
+    transform: translate( 30%, -150px);
+    font-size: 30px;
 }
 
 .infor-text {
-    width: 100%;
-    margin: 0 30%;
+    text-align: center;
     color: #5e5e5e;
 }
 
 .infor-hor {
     width: 2px;
     height: 40px;
-    margin: 10px 0 10px 50%; 
+    margin: 30px 0 30px 50%; 
     background-color: #c40283;
 }
 
 .infor-btn {
     padding: 20px 70px;
     background: linear-gradient(90deg,#dd0495, #b905aa);
-    margin: 10px 0 10px 35%;
-    display: inline-block;
     border-radius: 30px;
+    display: inline-block;
     box-shadow: 0 10px 0 #8f0260;
     position: relative;
     top: 0;
+    left: 42%;
 }
 
 .infor-btn::before {
@@ -519,7 +529,7 @@ small {
     display: block;
     background-color: #e7e6e6;
     color:rgb(110, 110, 110);
-    padding: 20px 0 20px 30% ;
+    padding: 20px 0 20px 580px;
 }
 @media screen and (max-width: 768px) {
 header {
@@ -561,16 +571,16 @@ header {
 }
 
 .content-ttl {
-    width: 100%;
+    width: 90%;
     position: absolute;
     left: 10%;
 }
 .content-ttl1 {
-    font-size: 40px;
+    font-size: 35px;
     font-family: 'Preahvihear', sans-serif;
     width: 60%;
     color: #c40283;
-    line-height: 70px
+    line-height: 70px;
 }
     
 
@@ -594,6 +604,7 @@ span {
 .content-enttl {
     width:90%;
     color: #C0C0C0;
+    font-size: 20px;
 }
 
 .news {
@@ -605,11 +616,12 @@ span {
     color: #c40283;
     font-family: 'Preahvihear', sans-serif;
     margin: 0 5%;
+    font-size: 20px;
 }
 
 .section-ttl1 {
     color:rgb(100, 100, 100);
-    font-size: 20px;
+    font-size: 30px;
     margin: 2% 0 5% 5%;
 
 }
@@ -617,8 +629,9 @@ span {
 .news-lists {
     border-top: solid rgb(196, 196, 196);
     border-bottom: solid rgb(196, 196, 196);
-    margin: 5%;
+    margin: 0 0 0 5%;
     padding: 3% 0;
+    width: 90%;
 }
 
 .news-list-link {
@@ -627,9 +640,11 @@ span {
     background-color: #c40283;
     border-radius: 30px;
     text-decoration: none;
+    font-size: 20px;
 }
 
 .news-lists-block {
+    width: 100%;
     list-style: none;
     border-bottom: solid 2px rgb(224, 224, 224);
     padding: 20px 0;
@@ -637,13 +652,15 @@ span {
 }
 
 time {
-    margin: 0 10px 0 0;
+    margin: 0 20px 0 0;
     color:rgb(139, 139, 139);
+    font-size: 15px;
 }
 .news-lists-text {
     display: inline-block;
-    margin: 0 0 0 10px;
+    margin: 0 0 0 20px;
     color:rgb(139, 139, 139);
+    font-size: 15px;
 }
 
 .about {
@@ -658,6 +675,7 @@ time {
     display: flex;
     justify-content: center;
     margin: 0 0 20px 0;
+    font-size: 20px;
 }
 
 .section-ttl2 {
@@ -665,6 +683,7 @@ time {
     justify-content: center;
     margin: 0 0 20px 0;
     color: rgb(107, 107, 107);
+    font-size: 30px;
 }
 
 .about-block {
@@ -682,6 +701,7 @@ time {
     width: 70%;
     height: auto;
     line-height: 25px;
+    font-size: 20px;
     padding: 20px;
     color: rgb(110, 110, 110);
 }
@@ -690,14 +710,15 @@ time {
     width: 70%;
     height: auto;
     line-height: 25px;
+    font-size: 20px;
     padding: 20px;
     color: rgb(110, 110, 110);
 }
 
 .about-img {
     width: 40%;
-    height: auto;
-    transform: translate( -10%, 0);
+    height: 250px;
+    transform: translate( -10%, 60px);
 }
 
 .service {
@@ -709,13 +730,14 @@ time {
     color: #c40283;
     font-family: 'Preahvihear', sans-serif;
     margin: 0 5%;
+    font-size: 20px;
 }
 
 .section-ttl3 {
     color:rgb(100, 100, 100);
     font-size: 20px;
     margin: 2% 0 5% 5%;
-
+    font-size: 30px;
 }
 
 .grid-parent {
@@ -754,12 +776,14 @@ time {
 .grid-child1-ttl1 {
     color:white;
     margin: 5% 0;
+    font-size: 20px;
 }
 
 .grid-child1-text {
     color: white;
     line-height: 25px;
-    padding: 0 10px;
+    text-align: center;
+    font-size: 15px;
 }
 
 .grid-child2 {
@@ -782,9 +806,9 @@ time {
 }
 
 .grid-child2-ttl {
-    margin: 0 0 0 40%;
+    font-size: 20px;
     color: white;
-    transform: translate( 0 , -30px);
+    transform: translate( 150px , -30px);
 }
 
 .grid-child2-text {
@@ -800,9 +824,11 @@ time {
 }
 
 .grid-child3-ttl {
-    margin: 0 0 0 40%;
+    width: 50%;
+    margin: 0;
+    font-size: 20px; 
     color: white;
-    transform: translate( 0 , 30px);
+    transform: translate( 150px , 30px);
 }
 
 .grid-child3-img {
@@ -833,18 +859,18 @@ time {
     font-family: 'Preahvihear', sans-serif;
     margin: 0 5%;
     padding: 20px 0 0 0;
+    font-size: 20px;
 }
 
 .section-ttl4 {
     color:rgb(100, 100, 100);
-    font-size: 20px;
+    font-size: 30px;
     margin: 2% 0 5% 5%;
 }
 
 .cards {
     display:flex;
     justify-content: space-around;
-    
 }
 
 .card {
@@ -900,18 +926,19 @@ time {
 }
 
 .blog-allpage {
-    margin: 10% 0;
-    padding: 15px 40px;
-    width: 15%;
-    transform: translate(135%, -60%);
-    background-color: white;
-    border-radius: 30px;
-    border: solid 1px #c40283;
+    width: 30%;
+    font-size: 15px;
+    margin: 100px 0 50px;
+    transform: translate( 270px , -50px);
 }
 
 .blog-allpage-link {
+    width: 100%;
     color:#c40283;
     text-decoration: none;
+    padding: 20px 0;
+    margin: 0;
+    display: inline-block;
 }
 
 
@@ -925,13 +952,14 @@ time {
     font-family: 'Preahvihear', sans-serif;
     margin: 0 5%;
     padding: 20px 0 0 0;
+    font-size: 20px;
 }
 
 .section-ttl5 {
     color:rgb(100, 100, 100);
     font-size: 20px;
     margin: 2% 0 5% 5%;
-
+    font-size: 30px;
 }
 
 .company-table {
@@ -983,36 +1011,37 @@ time {
 
 .infor-adopt {
     color: white;
-    transform: translate( 30%, -500%);
+    transform: translate( 40px, -100px);
+    font-size: 20px;
 }
 
 .infor-interview {
     color: white;
-    transform: translate( 30%, -500%);
+    transform: translate( 40px, -100px);
+    font-size: 20px;
 }
 
 .infor-text {
-    width: 100%;
-    margin: 0 30%;
+    text-align: center;
     color: #5e5e5e;
 }
 
 .infor-hor {
     width: 2px;
     height: 40px;
-    margin: 10px 0 10px 50%; 
+    margin: 20px 0 20px 50%; 
     background-color: #c40283;
 }
 
 .infor-btn {
     padding: 20px 70px;
     background: linear-gradient(90deg,#dd0495, #b905aa);
-    margin: 10px 0 10px 35%;
-    display: inline-block;
     border-radius: 30px;
+    display: inline-block;
     box-shadow: 0 10px 0 #8f0260;
     position: relative;
     top: 0;
+    left: 35%;
 }
 
 .infor-btn::before {
@@ -1033,10 +1062,12 @@ small {
     display: block;
     background-color: #e7e6e6;
     color:rgb(110, 110, 110);
-    padding: 20px 0 20px 30% ;
+    padding: 10px 0 10px 38%;
+    font-size: 10px;
 }
 
 }
+
 @media screen and (max-width: 480px) {
 header {
     display: flex;
@@ -1052,7 +1083,7 @@ header {
 
 .header-nav-list {
     width: 90%;
-    font-size: 12px;
+    font-size: 8px;
     display: flex;
     justify-content: space-around;
 }
@@ -1073,24 +1104,25 @@ header {
 }
 
 .content-img {
-    width: 50%;
+    width: 60%;
     position: absolute;
     top: 20px;
     right: 0;
 }
 
 .content-ttl {
-    width: 100%;
+    width: 80%;
     position: absolute;
     top: 30px;
     left: 15%;
+
 }
 .content-ttl1 {
-    font-size: 25px;
+    font-size: 20px;
     font-family: 'Preahvihear', sans-serif;
     width: 60%;
     color: #c40283;
-    line-height: 30px;
+    line-height: 35px;
 }
     
 
@@ -1101,7 +1133,7 @@ header {
 
 .content-subttl {
     width: 90%;
-    font-size: 15px;
+    font-size: 10px;
     color: #c40283;
     font-weight: bold;
     padding: 30px 0 10px 0;
@@ -1112,8 +1144,10 @@ span {
 }
 
 .content-enttl {
-    width:90%;
+    width:80%;
     color: #C0C0C0;
+    font-size: 10px;
+    line-height: 15px;
 }
 
 .news {
@@ -1149,24 +1183,26 @@ span {
     background-color: #c40283;
     border-radius: 30px;
     text-decoration: none;
+    font-size: 8px;
 }
 
 .news-lists-block {
     list-style: none;
     border-bottom: solid 2px rgb(224, 224, 224);
-    padding: 20px 0;
+    padding: 10px 0;
     width: 100%;
     font-size: 10px;
 }
 
 time {
+    font-size: 8px;
     margin: 0 10px 0 0;
     color:rgb(139, 139, 139);
 }
 .news-lists-text {
-    display: inline-block;
-    margin: 0 0 0 10px;
+    display: inline; 
     color:rgb(139, 139, 139);
+    font-size: 8px;
 }
 
 .about {
@@ -1186,14 +1222,14 @@ time {
 .section-ttl2 {
     display: flex;
     justify-content: center;
-    margin: 0 0 20px 0;
+    font-size: 15px;
     color: rgb(107, 107, 107);
+    margin: 0;
 }
 
 .about-block {
     display: flex;
     justify-content: space-around;
-
 }
 
 .about-des {
@@ -1221,8 +1257,8 @@ time {
 
 .about-img {
     width: 40%;
-    height: auto;
-    transform: translate( -10%, 0);
+    height: 130px;
+    transform: translate( -30px, 40px);
 }
 
 .service {
@@ -1248,7 +1284,7 @@ time {
     height: auto;
     margin: 0 5%;
     display: grid;
-    grid-template-rows: 150px 150px;
+    grid-template-rows: 100px 100px;
     grid-template-columns: 1fr 1fr;
     margin-bottom: 10%;
 }
@@ -1268,7 +1304,7 @@ time {
 }
 
 .grid-child1-img1 {
-    width: 40%;
+    width: 30%;
     height: auto;
 }
 
@@ -1280,13 +1316,14 @@ time {
 .grid-child1-ttl1 {
     color:white;
     margin: 5% 0;
+    font-size: 15px;
 }
 
 .grid-child1-text {
     color: white;
-    line-height: px;
-    padding: 0 10px;
+    line-height: 15px;
     font-size: 12px;
+    text-align: center;
 }
 
 .grid-child2 {
@@ -1303,19 +1340,21 @@ time {
 }
 
 .grid-child2-img1 {
-    width: 40%;
+    width: 30%;
     height: auto;
 }
 
 .grid-child2-ttl {
-    margin: 0 0 0 40%;
+    margin: 0;
     color: white;
+    font-size: 15px;
+    transform: translate( 70px , -30px );
 }
 
 .grid-child2-text {
     line-height: 15px;
     color: white;
-    font-size: 12px;
+    font-size: 8px;
     transform: translate( 0 , -30px);
 }
 
@@ -1326,9 +1365,9 @@ time {
 }
 
 .grid-child3-ttl {
-    margin: 0 0 0 40%;
     color: white;
-    transform: translate( 0 , 20px);
+    transform: translate( 70px , 10px );
+    font-size: 15px;
 }
 
 .grid-child3-img {
@@ -1338,15 +1377,15 @@ time {
 }
 
 .grid-child3-img1 {
-    width: 40%;
+    width: 30%;
     height: auto;
 }
 
 .grid-child3-text {
     line-height: 15px;
     color: white;
-    font-size: 12px;
-    transform: translate( 0 , -20px);
+    font-size: 8px;
+    transform: translate( 0 , -30px);
 }
 
 
@@ -1390,6 +1429,7 @@ time {
     border-top-left-radius: 10px;
     padding: 10px 10px;
     color: white;
+    font-size: 15px;
 }
 
 .card-img {
@@ -1402,8 +1442,8 @@ time {
 .card-text {
     position: static;
     padding: 10px;
-    font-size: 12px;
-    line-height: 20px;
+    font-size: 8px;
+    line-height: 15px;
 
 }
 
@@ -1411,6 +1451,7 @@ time {
     display: flex;
     justify-content: space-around;
     margin: 10px 0;
+    padding: 0;
 }
 
 .card-date {
@@ -1425,19 +1466,13 @@ time {
 }
 
 .blog-allpage {
-    margin: 10% 0;
-    padding: 15px 20px;
-    width: 30%;
-    transform: translate(80%, -60%);
-    background-color: white;
-    border-radius: 30px;
-    border: solid 1px #c40283;
+    transform: translate( 165px , -20px );
+    margin: 30px 0;
 }
 
 .blog-allpage-link {
     color:#c40283;
     text-decoration: none;
-    margin: 0 0 0 20px;
 }
 
 
@@ -1461,7 +1496,7 @@ time {
 }
 
 .company-table {
-    margin: 5% 10%;
+    margin: 5% 0 5% 10%;
     width:85%;
 }
 
@@ -1510,16 +1545,21 @@ time {
 
 .infor-adopt {
     color: white;
+    font-size: 15px;
+    transform: translate( 25px , -75px );
 }
 
 .infor-interview {
     color: white;
+    font-size: 15px;
+    transform: translate( 25px , -75px );
 }
 
 .infor-text {
     width: 100%;
-    margin: 0 15%;
+    text-align: center;
     color: #5e5e5e;
+    font-size: 12px;
 }
 
 .infor-hor {
@@ -1532,12 +1572,13 @@ time {
 .infor-btn {
     padding: 20px 70px;
     background: linear-gradient(90deg,#dd0495, #b905aa);
-    margin: 10px 0 10px 125px;
+    margin: 10px 0 10px 0;
     display: inline-block;
     border-radius: 30px;
     box-shadow: 0 10px 0 #8f0260;
     position: relative;
     top: 0;
+    left: 25%;
 }
 
 .infor-btn::before {
